# crypto3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  crypto3.nix
.github/scripts/: discover-test-groups.sh
.github/workflows/: format.yml  macos.yml  main.yaml  ubuntu.yml
benchmarks/: CMakeLists.txt
benchmarks/algebra/: bn254_fp12.cpp  bn254_fp12_asm.cpp  fields.cpp  fp12.cpp  multiexp.cpp
benchmarks/math/: polynomial_dfs.cpp
benchmarks/multiprecision/: big_mod.cpp
benchmarks/zk/: lpc.cpp
cmake/: CheckADX.cmake  CheckAVX.cmake  CheckBMI2.cmake  CheckHostCPUFeature.cmake  CheckSSE.cmake
docs/doxygen/: crypto3.doxyfile.in
docs/manual/: contributing.md  index.md  intermediate.md  quickstart.md
libs/algebra/: CMakeLists.txt  README.md
libs/algebra/docs/: introduction.md
libs/algebra/example/: CMakeLists.txt  curves.cpp  fields.cpp  multiexp.cpp  pairing.cpp  random_element.cpp  short_weierstrass_coordinates.cpp
libs/algebra/test/: CMakeLists.txt  bn254_fp12.cpp  bn254_fp12_fast_unit.cpp  curves.cpp  curves_static.cpp  fields.cpp  fields_static.cpp  fp12.cpp  matrix.cpp  multiexp.cpp  pairing.cpp  short_weierstrass_coordinates.cpp  type_traits.cpp  vector.cpp
libs/bench/: CMakeLists.txt
libs/bench/docs/: readme.md
libs/bench/example/: CMakeLists.txt  bls12_381.cpp
libs/benchmark_tools/: CMakeLists.txt
libs/benchmark_tools/include/nil/crypto3/bench/: benchmark.hpp  scoped_profiler.hpp
libs/block/: CMakeLists.txt  README.md
libs/block/docs/: implementation.md  usage.md
libs/block/test/: CMakeLists.txt  des.cpp  injector.cpp  kasumi.cpp  pack.cpp  rijndael.cpp
libs/blueprint/test/: CMakeLists.txt  test_macro_definition.cmake  test_plonk_component.hpp
libs/codec/: README.md
libs/codec/docs/: implementation.md  introduction.md  manual.md
libs/codec/test/: CMakeLists.txt  base.cpp  hex.cpp
libs/containers/: CMakeLists.txt  README.md
libs/containers/test/: CMakeLists.txt
libs/functional/test/: CMakeLists.txt
libs/hash/: CMakeLists.txt  README.md
libs/hash/docs/: implementation.md  index.md  introduction.md  pack.md  poseidon1.md  usage.md
libs/hash/example/: hashes.cpp
libs/hash/test/: CMakeLists.txt  blake2b.cpp  crc.cpp  find_group_hash.cpp  h2c.cpp  h2f.cpp  hash_to_curve.cpp  keccak.cpp  md4.cpp  md5.cpp  pack.cpp  pedersen.cpp  poseidon.cpp  ripemd.cpp  sha.cpp  sha1.cpp  sha2.cpp  sha3.cpp  tmp_poseidon_constexpr_generation.cpp
libs/kdf/: CMakeLists.txt
libs/kdf/test/: CMakeLists.txt  pbkdf2.cpp
libs/mac/: CMakeLists.txt  README.md
libs/mac/docs/: introduction.md
libs/mac/test/: CMakeLists.txt  cmac.cpp  gmac.cpp  hmac.cpp  poly1305.cpp
libs/marshalling/: readme.md
libs/marshalling/algebra/: CMakeLists.txt  README.md
libs/marshalling/containers/: CMakeLists.txt
libs/marshalling/core/: CMakeLists.txt  README.md
libs/marshalling/math/: CMakeLists.txt  readme.md
libs/marshalling/multiprecision/: CMakeLists.txt  README.md
libs/marshalling/zk/: CMakeLists.txt
libs/math/: CMakeLists.txt  README.md
libs/math/docs/: index.md  introduction.md
libs/math/example/: polynomials.cpp  polynomials_dfs.cpp
libs/math/test/: CMakeLists.txt  basic_radix2_domain.cpp  evaluation_domain.cpp  polynomial.cpp  polynomial_arithmetic.cpp  polynomial_dfs.cpp  polynomial_dfs_view.cpp  polynomial_view.cpp
libs/math/test/benchmarks/: CMakeLists.txt  polynomial_dfs_benchmark.cpp
libs/modes/test/: CMakeLists.txt  aead_chacha20poly1305.cpp
libs/multiprecision/example/: big_seventh.cpp  cpp_int_mul_timing.cpp  cpp_int_snips.cpp  debug_adaptor_snips.cpp  hashing_examples.cpp  hypergeometric_luke_algorithms.cpp  logged_adaptor.cpp  mixed_integer_arithmetic.cpp  modular_examples.cpp  numeric_limits_snips.cpp  random_snips.cpp  safe_prime.cpp
libs/multiprecision/test/: CMakeLists.txt  arithmetic_non_matching_bitlength_numbers.cpp  constexpr_test_arithmetic_backend.cpp  constexpr_test_cpp_int_2.cpp  git_issue_167.cpp  git_issue_277.cpp  inverse.cpp  issue_13148.cpp  jacobi.cpp  modular_adaptor_fixed.cpp  ressol.cpp  skeleton_backend.hpp  test_arithmetic.hpp  test_arithmetic_backend_concept.cpp  test_arithmetic_cpp_int_1.cpp  test_arithmetic_cpp_int_10.cpp  test_arithmetic_cpp_int_11.cpp  test_arithmetic_cpp_int_12.cpp  test_arithmetic_cpp_int_13.cpp  test_arithmetic_cpp_int_14.cpp  test_arithmetic_cpp_int_15.cpp  test_arithmetic_cpp_int_16.cpp  test_arithmetic_cpp_int_17.cpp  test_arithmetic_cpp_int_18.cpp  test_arithmetic_cpp_int_19.cpp  test_arithmetic_cpp_int_2.cpp  test_arithmetic_cpp_int_20.cpp  test_arithmetic_cpp_int_3.cpp  test_arithmetic_cpp_int_4.cpp  test_arithmetic_cpp_int_5.cpp  test_arithmetic_cpp_int_6.cpp  test_arithmetic_cpp_int_7.cpp  test_arithmetic_cpp_int_8.cpp  test_arithmetic_cpp_int_9.cpp  test_arithmetic_cpp_int_br.cpp  test_arithmetic_mpz_rat.cpp  test_checked_mixed_cpp_int.cpp  test_constants.cpp  test_constexpr.cpp  test_convert_from_cpp_int.cpp  (+13 more)
libs/parallelization-utils/: CMakeLists.txt
libs/parallelization-utils/test/: thread_pool.cpp
libs/pkpad/docs/: concepts.md  index.md  introduction.md
libs/pkpad/test/: CMakeLists.txt  emsa1.cpp  mgf1.cpp
libs/pubkey/: CMakeLists.txt  README.md
libs/pubkey/docs/: concepts.md  implementation.md  introduction.md  usage.md
libs/pubkey/test/: bls.cpp  (+6 more)
libs/random/: CMakeLists.txt
libs/stream/: CMakeLists.txt  README.md
libs/stream/docs/: introduction.md
libs/stream/include/nil/crypto3/detail/: type_traits.hpp
libs/stream/include/nil/crypto3/stream/: chacha.hpp  cipher_state.hpp  cipher_value.hpp
libs/stream/include/nil/crypto3/stream/accumulators/: stream.hpp
libs/stream/include/nil/crypto3/stream/accumulators/parameters/: bits.hpp
libs/stream/include/nil/crypto3/stream/algorithm/: decrypt.hpp  encrypt.hpp  stream.hpp
libs/stream/include/nil/crypto3/stream/detail/chacha/: chacha_avx2_impl.hpp  chacha_functions.hpp  chacha_impl.hpp  chacha_policy.hpp  chacha_sse2_impl.hpp
libs/stream/test/: CMakeLists.txt  chacha.cpp
libs/transpiler/: CMakeLists.txt
libs/zk/: CMakeLists.txt
scripts/: test_all.sh  test_all_parallel.sh
(+1099 files in other folders)
